<resources>
    <string name="app_name">My Application</string>
    <string name="date">Дата:</string>
    <string name="cloud">Облачность: </string>
    <string name="humidity">Относительная влажность:</string>
    <string name="pressure">Атмосферное давление:</string>
    <string name="min_temperature">Минимальная температура:</string>
    <string name="max_temperature">Максимальная температура:</string>
    <string name="speed">Скорость ветра</string>
    <string name="back">Назад</string>
</resources>