<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="4dp">

    <TextView
        android:id="@+id/tvDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvDateTitle"
        app:layout_constraintTop_toTopOf="@id/tvDateTitle" />

    <TextView
        android:id="@+id/tvCloudTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/cloud"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateTitle" />

    <TextView
        android:id="@+id/tvCloudInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvCloudTitle"
        app:layout_constraintTop_toTopOf="@id/tvCloudTitle" />

    <TextView
        android:id="@+id/tvHumidityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCloudTitle" />

    <TextView
        android:id="@+id/tvHumidityInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvHumidityTitle"
        app:layout_constraintTop_toTopOf="@id/tvHumidityTitle" />

    <TextView
        android:id="@+id/tvPressureTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHumidityTitle"  />

    <TextView
        android:id="@+id/tvPressureInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvPressureTitle"
        app:layout_constraintTop_toTopOf="@id/tvPressureTitle" />

    <TextView
        android:id="@+id/tvTemperatureMaxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_temperature"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPressureTitle"  />

    <TextView
        android:id="@+id/tvTemperatureMaxInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvTemperatureMaxTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTemperatureMaxTitle" />

    <TextView
        android:id="@+id/tvTemperatureMinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temperature"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperatureMaxTitle"  />

    <TextView
        android:id="@+id/tvTemperatureMinInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvTemperatureMinTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTemperatureMinTitle" />

    <TextView
        android:id="@+id/tvSpeedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperatureMinTitle" />

    <TextView
        android:id="@+id/tvSpeedInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvSpeedTitle"
        app:layout_constraintTop_toTopOf="@+id/tvSpeedTitle" />

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/back"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSpeedTitle"/>


</androidx.constraintlayout.widget.ConstraintLayout>